--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -4,28 +4,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Wpisz nazwę gracza</title>
+
+    <style>
+        .login-button-container {
+            position: absolute;
+            right: 480px;
+            top: 10px;
+        }
+    </style>
+
 </head>
-<body class="bg-dark text-white d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-    <form method="post" class="w-50">
-        {% csrf_token %}
-        <div class="mb-3">
-            <input type="text" class="form-control mb-2" id="summoner_name" name="summoner_name" placeholder="Enter summoner name">
-        </div>
-    <div class="d-flex justify-content-between align-items-center">
-        
-        <div class="flex-grow-1 me-2">
-            <select id="region" name="region" class="form-select">
-                {% for code, name in regions %}
-                <option value="{{ code }}">{{ name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        
-        <button type="submit" class="btn btn-primary">
-            <i class="fas fa-search"></i>
-        </button>
+<body class="bg-dark text-white">
+
+    <!-- Przycisk Logowania -->
+    <div class="login-button-container">
+        <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
     </div>
-    </form>
+
+
+    <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
+        <form method="post" class="w-50">
+            {% csrf_token %}
+            <div class="mb-3">
+                <input type="text" class="form-control mb-2" id="summoner_name" name="summoner_name" placeholder="Enter summoner name">
+            </div>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="flex-grow-1 me-2">
+                    <select id="region" name="region" class="form-select">
+                        {% for code, name in regions %}
+                        <option value="{{ code }}">{{ name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+        </form>
+    </div>
 
 </body>
 </html>
