--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -13,13 +13,41 @@
         }
     </style>
 
+    <style>
+        .padding-left {
+            padding-left: 50px;
+        }
+    </style>
+
+
+
 </head>
 <body class="bg-dark text-white">
 
-    <!-- Przycisk Logowania -->
-    <div class="login-button-container">
-        <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-1"> </div>
+        <!-- Lewa strona -->
+        <div class="col text-center padding-left">
+            {% if user.is_authenticated %}
+                <button class="btn btn-info" type="button" disabled>Welcome, {{ user.username }}!</button>
+            {% endif %}
+        </div>
+
+        <!-- Prawa strona -->
+        <div class="col text-center ">
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout_confirm' %}" class="btn btn-secondary">Log out</a>
+                <!-- Przycisk z ikoną osoby dla zalogowanych użytkowników -->
+                <a href="{% url 'profile' %}" class="btn btn-primary "><i class="fas fa-person"></i></a>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-primary ">Log in</a>
+            {% endif %}
+        </div>
+        <div class="col-md-1"> </div>
     </div>
+</div>
 
 
     <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
