--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -11,9 +11,13 @@
             right: 480px;
             top: 10px;
         }
-    </style>
 
-    <style>
+        .color-white {
+
+        color: rgb(0, 0, 0) !important;
+
+        }
+
         .padding-left {
             padding-left: 50px;
         }
@@ -29,9 +33,9 @@
     <div class="row">
         <div class="col-md-1"> </div>
         <!-- Lewa strona -->
-        <div class="col text-center padding-left">
+        <div class="col text-center padding-left ">
             {% if user.is_authenticated %}
-                <button class="btn btn-info" type="button" disabled>Welcome, {{ user.username }}!</button>
+                <button class="btn btn-info color-white" type="button" disabled>Welcome, {{ user.username }}!</button>
             {% endif %}
         </div>
 
@@ -73,3 +77,5 @@
 
 </body>
 </html>
+
+
